# docs/swagger.json
@@ -327,8 +327,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/resources.PostDto"
                         }
@@ -432,7 +432,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Comment"
+                            "$ref": "#/definitions/resources.CommentDto"
                         }
                     },
                     "400": {
@@ -482,7 +482,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/domain.Comment"
+                            "$ref": "#/definitions/resources.CommentDto"
                         }
                     },
                     "400": {
@@ -544,7 +544,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Comment"
+                            "$ref": "#/definitions/resources.CommentDto"
                         }
                     },
                     "400": {
@@ -604,10 +604,10 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Comment"
+                            "$ref": "#/definitions/resources.CommentDto"
                         }
                     },
                     "400": {
@@ -792,9 +792,7 @@
             "type": "object",
             "properties": {
                 "body": {
-                    "type": "string"
-                },
-                "email": {
+                    "description": "Email string `json:\"email\"`",
                     "type": "string"
                 },
                 "name": {
@@ -846,6 +844,23 @@
                 },
                 "user": {
                     "$ref": "#/definitions/resources.UserDto"
+                }
+            }
+        },
+        "resources.CommentDto": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "post_id": {
+                    "type": "integer"
                 }
             }
         },
